force-app/main/default/objects/TownATOTable__c/TownATOTable__c.object-meta.xml
<CustomObject>
    <label>Tabella Comune/ATO</label>
    <nameField>
        <displayFormat>TCA-{000000}</displayFormat>
        <label>Tabella Comune/ATO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tabelle Comune/ATO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>