force-app/main/default/objects/TownATOTable__c/fields/CompanyOwner__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwner__c</fullName>
    <label>CompanyOwner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>